src/objects/Giving_Team_Change_Log__c.object
<CustomObject>
    <description>T-465414	Customize Giving teams; mirror changes to Oppty team members and values to enable history tracking. Needs custom trigger to replicate all team assignments and setup.</description>
    <fields>
        <fullName>Giving_Record_Access__c</fullName>
        <description>T-465414; capture the oppty team access value</description>
        <label>Giving Record Access</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-465414</description>
        <inlineHelpText>Reference the Giving Record</inlineHelpText>
        <label>Giving Record</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Giving Team Change Logs</relationshipLabel>
        <relationshipName>Giving_Team_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving_Team_Role__c</fullName>
        <description>T-465414; capture the Giving Record team role value for history tracking</description>
        <label>Giving Team Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-465414</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Giving Team Change Logs</relationshipLabel>
        <relationshipName>Giving_Team_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Giving Team Change Log</label>
    <nameField>
        <displayFormat>GTCL-{00000000}</displayFormat>
        <label>Giving Team Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Team Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>